--- a/M7/M7_groupflask/templates/base.html
+++ b/M7/M7_groupflask/templates/base.html
@@ -15,17 +15,17 @@
             <a href="{{ url_for('decimal_to_binary') }}">Decimal to Binary</a>
             <a href="{{ url_for('classful_analysis') }}">Classful Analysis</a>
             <a href="{{ url_for('wildcard_mask') }}">Wildcard Mask</a>
-            <a href="{{ url_for('results') }}">Results</a>
+            <a href="{{ url_for('results') }}">Save Results</a>
         </nav>
     </header>
     <main>
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-        <ul>
+            <ul>
             {% for category, message in messages %}
-            <li class="{{ category }}">{{ message }}</li>
+                <li class="{{ category }}">{{ message }}</li>
             {% endfor %}
-        </ul>
+            </ul>
         {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
