--- a/M7_groupflask/templates/home.html
+++ b/M7_groupflask/templates/home.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Welcome to Network Tools</h2>
-<p>Select an option from the menu above to begin.</p>
+<p>Choose an activity from the navigation menu to begin:</p>
+<ul>
+    <li><a href="{{ url_for('binary_to_decimal') }}">Binary to Decimal Conversion</a></li>
+    <li><a href="{{ url_for('decimal_to_binary') }}">Decimal to Binary Conversion</a></li>
+    <li><a href="{{ url_for('classful_analysis') }}">Classful Address Analysis</a></li>
+    <li><a href="{{ url_for('wildcard_mask') }}">Wildcard Mask Determination</a></li>
+    <li><a href="{{ url_for('results') }}">Save and View Results</a></li>
+</ul>
 {% endblock %}
