--- a/M7_groupflask/templates/results.html
+++ b/M7_groupflask/templates/results.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Results Saved</h2>
-<p>All game results have been saved successfully to CSV files.</p>
+<p>All game results have been successfully saved to CSV files.</p>
 <p>You can find the following files in your project directory:</p>
 <ul>
     <li><code>binary_to_decimal_results.csv</code></li>
