--- a/M7_groupflask/templates/classful_analysis.html
+++ b/M7_groupflask/templates/classful_analysis.html
@@ -4,7 +4,7 @@
 <p>Enter an IP address to determine its class:</p>
 <form method="POST">
     <label for="ip_address">IP Address:</label>
-    <input type="text" id="ip_address" name="ip_address" placeholder="e.g., 192.168.1.1" required>
+    <input type="text" id="ip_address" name="ip_address" placeholder="e.g., 192.168.1.1" value="{{ ip_address if ip_address else '' }}" required>
     <button type="submit">Analyze</button>
 </form>
 
