--- a/M7_groupflask/templates/base.html
+++ b/M7_groupflask/templates/base.html
@@ -15,7 +15,7 @@
             <a href="{{ url_for('decimal_to_binary') }}">Decimal to Binary</a>
             <a href="{{ url_for('classful_analysis') }}">Classful Analysis</a>
             <a href="{{ url_for('wildcard_mask') }}">Wildcard Mask</a>
-            <a href="{{ url_for('results') }}">Save Results</a>
+            <a href="{{ url_for('show_results') }}">View Results</a>
         </nav>
     </header>
     <main>
