--- a/M7_groupflask/templates/home.html
+++ b/M7_groupflask/templates/home.html
@@ -7,7 +7,6 @@
     <li><a href="{{ url_for('decimal_to_binary') }}">Decimal to Binary Conversion</a></li>
     <li><a href="{{ url_for('classful_analysis') }}">Classful Address Analysis</a></li>
     <li><a href="{{ url_for('wildcard_mask') }}">Wildcard Mask Determination</a></li>
-    <li><a href="{{ url_for('show_results') }}">View Results</a>
-
+    <li><a href="{{ url_for('show_results') }}">View Results</a></li>
 </ul>
 {% endblock %}
