--- a/M7_groupflask/templates/base.html
+++ b/M7_groupflask/templates/base.html
@@ -30,5 +30,8 @@
         {% endwith %}
         {% block content %}{% endblock %}
     </main>
+    <footer>
+        <p>&copy; 2024 Network Tools. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
