--- a/M7_groupflask/templates/classful_analysis.html
+++ b/M7_groupflask/templates/classful_analysis.html
@@ -9,6 +9,8 @@
 </form>
 
 {% if result %}
-    <p><strong>Result:</strong> {{ result }}</p>
+    <div class="result-box">
+        <p><strong>Result:</strong> {{ result }}</p>
+    </div>
 {% endif %}
 {% endblock %}
