--- a/M7_groupflask/templates/home.html
+++ b/M7_groupflask/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Welcome to Network Tools</h2>
-<p>Choose an activity from the navigation menu or select below:</p>
+<p>Explore the tools below to practice networking concepts:</p>
 <ul>
     <li><a href="{{ url_for('binary_to_decimal') }}">Binary to Decimal Conversion</a></li>
     <li><a href="{{ url_for('decimal_to_binary') }}">Decimal to Binary Conversion</a></li>
