--- a/M7_groupflask/templates/decimal_to_binary.html
+++ b/M7_groupflask/templates/decimal_to_binary.html
@@ -12,7 +12,7 @@
 </form>
 
 {% if result %}
-    <div class="result-box">
+    <div class="result-box {% if result == 'Correct!' %}result-correct{% else %}result-wrong{% endif %}">
         <p><strong>Result:</strong> {{ result }}</p>
     </div>
 {% endif %}
