--- a/M7_groupflask/templates/classful_analysis.html
+++ b/M7_groupflask/templates/classful_analysis.html
@@ -9,7 +9,7 @@
 </form>
 
 {% if result %}
-    <div class="result-box">
+    <div class="classful-result">
         <p><strong>Result:</strong> {{ result }}</p>
     </div>
 {% endif %}
